--- a/src/app/components/animation-progress/animation-progress.component.html
+++ b/src/app/components/animation-progress/animation-progress.component.html
@@ -2,18 +2,18 @@
   <ion-col [size]="12" >
     <div>
         <ion-item style="color: transparent !important;">
-          <ion-thumbnail slot="start">
-            <ion-skeleton-text animated></ion-skeleton-text>
+          <ion-thumbnail slot="start" class="custom-thumbnail">
+            <ion-skeleton-text animated class="custom-thumbnail"></ion-skeleton-text>
           </ion-thumbnail>
           <ion-label>
             <p>
-              <ion-skeleton-text animated style="width: 90%"></ion-skeleton-text>
+              <ion-skeleton-text animated class="custom-thumbnail" style="width: 90%"></ion-skeleton-text>
             </p>
             <p>
-              <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+              <ion-skeleton-text animated class="custom-thumbnail" style="width: 80%"></ion-skeleton-text>
             </p>
             <p>
-              <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
+              <ion-skeleton-text animated class="custom-thumbnail" style="width: 60%"></ion-skeleton-text>
             </p>
           </ion-label>
           <ion-thumbnail slot="end">
