--- a/src/app/create-group/create-group.page.html
+++ b/src/app/create-group/create-group.page.html
@@ -30,7 +30,7 @@
 
       <ion-row class="ion-no-margin ion-no-padding">
         <ion-col class="margin-text ion-no-padding">
-          <ion-label class="text-white label">Seleccione competencia:</ion-label>
+          <ion-label class="text-white label">Competencia en la que participarán:</ion-label>
         </ion-col>
         <ion-item class="margin-inputs ion-no-padding" [disabled]="isCargando">
           <ion-select class="text-white" [(ngModel)]="compActivas" (ngModelChange)="ngMode($event)" placeholder="Selecciona una competencia">
