--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -4,9 +4,8 @@
       <ion-button (click)="volver()">
         <ion-icon name="arrow-back-outline"></ion-icon>
       </ion-button>
-      <p *ngIf="isAdmin" class="text-header">Alta de usuario</p>
-      <p *ngIf="!isAdmin" class="text-header">Registro de usuario</p>
     </ion-buttons>
+    <ion-title class="text-white">Registro usuario</ion-title>
   </ion-toolbar>
 </ion-header>
 
