--- a/src/app/reporte-grupos/reporte-grupos.component.html
+++ b/src/app/reporte-grupos/reporte-grupos.component.html
@@ -5,42 +5,11 @@
                 <ion-icon name="arrow-back-outline"></ion-icon>
             </ion-button>
         </ion-buttons>
-        <p class="ion-no-margin ion-no-padding"></p>
+        <p style="font-size: 1.1rem" class="ion-no-margin ion-no-padding"> Desempeño de grupos </p>
     </ion-toolbar>
 </ion-header>
 
 <ion-content class="bg-image no-scroll">
-    <ion-row class="ion-margin">
-        <ion-col [size]="12" class="display-flex" >
-            <p class="margin-auto text-white" style="font-size: 1rem"> Reporte de desempeño en aciertos por grupo</p>
-        </ion-col>
-    </ion-row>
-
-    <!--
-    <ion-row class="ion-no-margin ion-no-padding">
-        <ion-button size="small" color="primary" (click)="verInfo()">
-            <p>{{textInfo}}</p>
-        </ion-button>
-    </ion-row>
-    
-    <ion-row class="ion-no-margin desenfoque" *ngIf="verMasInfo" >
-     
-        <ion-col>
-            <ion-list style="background-color: transparent">
-                <ion-item >
-                    <p class="text-white ion-no-margin ion-no-padding">- Aciertos exactos (predicción completamente exactas en goles y ganador o empate)</p>
-                </ion-item>
-                <ion-item >
-                    <p class="text-white ion-no-margin ion-no-padding">- Acierto parcial (predicción no fueron completamente exactas en goles)</p>
-                </ion-item>
-                <ion-item >
-                    <p class="text-white ion-no-margin ion-no-padding">- No aciertos</p>
-                </ion-item>
-            </ion-list>
-        </ion-col>
-    </ion-row>
-    -->
-
     <ion-row class="margin-contenedor">
         <ion-col [size]="12" class="ion-no-padding ion-no-margin">
             <ion-grid class="ion-no-padding ion-no-margin desenfoque">
@@ -53,12 +22,12 @@
                         <ion-col [size]="6">
                             <ion-row>
                                 <ion-col class="display-flex">
-                                    <p class="text-white margin-auto" >Exactos</p>
+                                    <p class="text-white margin-auto" >Aciertos</p>
                                 </ion-col>
                             </ion-row>
                             <ion-row>
                                 <ion-col class="display-flex" >
-                                    <p class="text-white margin-auto">Completo</p>
+                                    <p class="text-white margin-auto">Exactos</p>
                                 </ion-col>
                                 <ion-col class="display-flex" >
                                     <p class="text-white margin-auto">Parcial</p>
@@ -70,9 +39,12 @@
                         </ion-col>
                     </ion-item>
                 </ion-row>
-                <ion-row *ngFor="let grupo of gruposReport">
+                <ion-row *ngFor="let grupo of gruposReport; let i = index">
                     <ion-item class="ion-no-margin ion-no-padding">
-                        <ion-col [size]="3" class="display-flex">
+                        <ion-col [size]="1" class="display-flex">
+                            <p class="text-white margin-auto">{{i+1}}</p>
+                        </ion-col>
+                        <ion-col [size]="2" class="display-flex">
                             <p class="text-white margin-auto">{{grupo.nameGrupo}}</p>
                         </ion-col>
                         <ion-col [size]="3" class="display-flex">
@@ -89,15 +61,19 @@
             </ion-grid>
         </ion-col>
     </ion-row>
-
-
-    <ion-row class="margin-contenedor">
-        <ion-col [size]="12" class="ion-no-padding ion-no-margin">
-            <div class="display-flex desenfoque">
+    
+    <ion-row class="ion-no-padding ion-no-margin desenfoque" >
+        <ion-col class="ion-no-padding ion-no-margin">
+            <h5 class="text-white " style="padding-left: 1rem"> Porcentaje de desempeño de aciertos de grupos</h5>
+            <div class="display-flex">
                 <canvas id="myChart"></canvas>
             </div>
         </ion-col>
     </ion-row>
+
+
+         
+    
 
 
 </ion-content>
