--- a/src/app/create-group/create-group.page.html
+++ b/src/app/create-group/create-group.page.html
@@ -48,7 +48,7 @@
       </ion-row>
       <ion-row class="ion-no-padding row-popups popup-edicion" *ngIf="isMuestraInformacion">
         <ion-col [size]="11" class="ion-no-padding ion-no-margin">
-          <p class="text-popup-edicion ion-no-padding"> Define bien que competencia quieres, no podrás modificarla una vez creado tu grupo.</p>
+          <p class="text-popup-edicion ion-no-padding">No podrás cambiar la competencia una vez creado tu grupo.</p>
         </ion-col>
         <ion-col [size]="1" class="ion-no-padding ion-no-margin display-flex">
           <ion-row class="margin-auto">
