--- a/src/app/tabla-posiciones-liga/tabla-posiciones-liga.page.html
+++ b/src/app/tabla-posiciones-liga/tabla-posiciones-liga.page.html
@@ -18,22 +18,51 @@
   </ion-row>
 
   <div *ngIf="!isCargando">
-    <ion-row  *ngFor="let equipo of tablaPosiciones">
-      <ion-col [size]="12">
-        <ion-list>
-          <ion-item class="border-light">
-            <p class="text-white"> {{equipo.rank}}</p>
-            <p class="text-white"> {{equipo.team.logo}}</p>
-            <p class="text-white"> {{equipo.team.name}}</p>
-            <p class="text-white"> {{equipo.points}}</p>
-            <p class="text-white"> Jugados: {{equipo.all.played}}</p>
-            <p class="text-white"> Ganados: {{equipo.all.win}}</p>
-            <p class="text-white"> Empatados: {{equipo.all.draw}}</p>
-            <p class="text-white"> Perdidos: {{equipo.all.lose}}</p>
-            <p class="text-white"> Goles: {{equipo.all.goals.for}}</p>
-            <p class="text-white"> Goles en contra: {{equipo.all.goals.against}}</p>
+    <ion-row class="ion-no-margin ion-no-padding desenfoque" >
+      <ion-col [size]="12" class="ion-no-margin ion-no-padding">
+        <ion-row class="ion-no-margin ion-no-padding" >
+          <ion-col [size]="6" class="ion-no-margin ion-no-padding display-flex">
+            <p class="text-white margin-auto">Club</p>
+          </ion-col>
+          <ion-col [size]="1" class="ion-no-margin ion-no-padding display-flex">
+            <p class="text-white margin-auto">PJ</p>
+          </ion-col>
+          <ion-col [size]="1" class="ion-no-margin ion-no-padding display-flex">
+            <p class="text-white margin-auto">G</p>
+          </ion-col>
+          <ion-col [size]="1" class="ion-no-margin ion-no-padding display-flex">
+            <p class="text-white margin-auto">E</p>
+          </ion-col>
+          <ion-col [size]="1" class="ion-no-margin ion-no-padding display-flex">
+            <p class="text-white margin-auto">P</p>
+          </ion-col>
+          <ion-col [size]="2" class="ion-no-margin ion-no-padding display-flex">
+            <b class="text-white margin-auto">Pts</b>
+          </ion-col>
+        </ion-row>
+          <ion-item class="border-light" *ngFor="let equipo of tablaPosiciones">
+
+              <ion-col [size]="6" class="ion-no-margin ion-no-padding display-flex">
+                <p class="text-white ion-no-margin ion-no-padding">{{equipo.rank}} <img class="logo-equipo" src="{{equipo.team.logo}}"> {{equipo.team.name}}</p>
+              </ion-col>
+              <ion-col [size]="1" class="ion-no-margin ion-no-padding display-flex">
+                <p class="text-white ion-no-margin ion-no-padding margin-auto">{{equipo.all.played}}</p>
+              </ion-col>
+              <ion-col [size]="1" class="ion-no-margin ion-no-padding display-flex">
+                <p class="text-white ion-no-margin ion-no-padding margin-auto">{{equipo.all.win}}</p>
+              </ion-col>
+              <ion-col [size]="1" class="ion-no-margin ion-no-padding display-flex">
+                <p class="text-white ion-no-margin ion-no-padding margin-auto">{{equipo.all.draw}}</p>
+              </ion-col>
+            <ion-col [size]="1" class="ion-no-margin ion-no-padding display-flex">
+              <p class="text-white ion-no-margin ion-no-padding margin-auto">{{equipo.all.lose}}</p>
+            </ion-col>
+              <ion-col [size]="2" class="ion-no-margin ion-no-padding display-flex">
+                <b class="text-white ion-no-margin ion-no-padding margin-auto margin-auto">{{equipo.points}}</b>
+              </ion-col>
+           
+ 
           </ion-item>
-        </ion-list>
       </ion-col>
     </ion-row>
   </div>
