cambios, correccion bugs

--- a/src/app/list-competencias/list-competencias.page.html
+++ b/src/app/list-competencias/list-competencias.page.html
@@ -1,11 +1,11 @@
 <ion-header no-border>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-button (click)="volver()" [disabled]="isAgregandoCompetencia">
+      <ion-button (click)="volver()">
         <ion-icon name="arrow-back-outline"></ion-icon>
-        <ion-title class="text">Competencias del mundo</ion-title>
       </ion-button>
     </ion-buttons>
+    <ion-title class="text-white">Alta de competencias</ion-title>
   </ion-toolbar>
 </ion-header>
 
