--- a/src/app/list-users/list-users.page.html
+++ b/src/app/list-users/list-users.page.html
@@ -3,10 +3,9 @@
     <ion-buttons slot="start">
       <ion-button (click)="volver()">
         <ion-icon name="arrow-back-outline"></ion-icon>
-        <ion-title class="text">Lista de usuarios</ion-title>
       </ion-button>
     </ion-buttons>
-    <p class="ion-no-margin ion-no-padding text-size-medium">Lista de usuarios registrados</p>
+    <ion-title class="text-white">Lista de usuarios registrados</ion-title>
   </ion-toolbar>
 </ion-header>
 
