--- a/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.html
+++ b/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.html
@@ -5,7 +5,7 @@
                 <ion-icon name="arrow-back-outline"></ion-icon>
             </ion-button>
         </ion-buttons>
-        <p class="ion-no-margin ion-no-padding text-size-medium">Edición de datos</p>
+        <ion-title class="text-white">Edición de datos de partidos</ion-title>
     </ion-toolbar>
 </ion-header>
 
