--- a/src/app/reporte-grupos/reporte-grupos.component.html
+++ b/src/app/reporte-grupos/reporte-grupos.component.html
@@ -5,7 +5,7 @@
                 <ion-icon name="arrow-back-outline"></ion-icon>
             </ion-button>
         </ion-buttons>
-        <p style="font-size: 1.1rem" class="ion-no-margin ion-no-padding"> Desempeño de grupos </p>
+        <ion-title class="text-white">Desempeño de grupos</ion-title>
     </ion-toolbar>
 </ion-header>
 
