--- a/src/app/buscar-group/buscar-group.page.html
+++ b/src/app/buscar-group/buscar-group.page.html
@@ -1,13 +1,11 @@
 <ion-header no-border>
-  <ion-toolbar color="primary" style="-webkit-border-radius: 0px 0px 6px 6px">
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-button (click)="volver()">
         <ion-icon name="arrow-back-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <p>
-      Busca el grupo
-    </p>
+    <ion-title class="text-white">Búsqueda de grupos</ion-title>
   </ion-toolbar>
 </ion-header>
 
