--- a/src/app/terminos/terminos.component.html
+++ b/src/app/terminos/terminos.component.html
@@ -3,10 +3,9 @@
         <ion-buttons slot="start">
             <ion-button (click)="volver()">
                 <ion-icon name="arrow-back-outline"></ion-icon>
-                <ion-title class="text">Terminos y condiciones</ion-title>
             </ion-button>
         </ion-buttons>
-        <p>Términos y condiciones</p>
+        <ion-title class="text-white">Términos y condiciones</ion-title>
     </ion-toolbar>
 </ion-header>
 
