putnajes por fecha, pantalla nueva, bugs

--- a/src/app/edit-group/edit-group.page.html
+++ b/src/app/edit-group/edit-group.page.html
@@ -9,4 +9,12 @@
   </ion-toolbar>
 </ion-header>
 
+<ion-content class="bg-image no-scroll">
+  <form>
+    <ion-grid>
+      
+    </ion-grid>
+  </form>
+</ion-content>
+
 
