--- a/src/app/list-competencias-admin/list-competencias-admin.page.html
+++ b/src/app/list-competencias-admin/list-competencias-admin.page.html
@@ -18,7 +18,7 @@
   <ion-row>
     <ion-col [size]="12" *ngIf="isCargando">
       <ion-progress-bar color="primary" type="indeterminate"></ion-progress-bar>
-      <p>Aguarde, cargando TU lista de competencias</p>
+      <p class="text-white">Aguarde, cargando lista de competencias</p>
       <app-animation-progress></app-animation-progress>
       <app-animation-progress></app-animation-progress>
       <app-animation-progress></app-animation-progress>
