--- a/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.scss
+++ b/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.scss
@@ -17,8 +17,11 @@
 
 .text-resultado{
   font-size: 1rem;
-  margin-left: 1rem;
   font-weight: 600;
+}
+
+.row-falta-jugar{
+  margin-top: 1.5rem ;
 }
 
 .text-goles{
