--- a/src/app/puntajes-grupos/puntajes-grupos.page.html
+++ b/src/app/puntajes-grupos/puntajes-grupos.page.html
@@ -10,6 +10,20 @@
 </ion-header>
 
 <ion-content class="bg-image no-scroll">
+  <ion-row style="margin-top: 0.3rem;">
+    <ion-col size="12" class="ion-no-margin ion-no-padding" [size]="12">
+      <ion-row class="ion-no-margin ion-no-padding">
+        <p class="text-white ion-no-margin ion-no-padding"> Competencia: {{nameCompetencia}} </p>
+      </ion-row>
+    </ion-col>
+  </ion-row>
+  <ion-row class="ion-no-padding ion-no-margin">
+    <ion-col size="12" class="ion-no-margin ion-no-padding" [size]="12">
+      <ion-row class="ion-no-margin ion-no-padding">
+        <p class="text-white ion-no-margin ion-no-padding"> Año: {{anioCompetencia}} </p>
+      </ion-row>
+    </ion-col>
+  </ion-row>
   <ion-row style="margin-top: 1rem;">
     <ion-col size="12" class="display-flex" [size]="12">
       <ion-row class="margin-auto">
@@ -37,16 +51,33 @@
     <ion-col [size]="12" class="display-flex ion-no-padding ion-select desenfoque" *ngIf="clickEventCargaJornada">
       <ion-row class="margin-auto ion-no-padding">
         <ion-select class="text-white ion-no-margin ion-no-padding" [value]="fechaAVisualizarPorActualidad" [(ngModel)]="fechaAVisualizarPorActualidad" (ngModelChange)="fechaEvent($event)" placeholder="Seleccione una fecha">
-          <div class="ion-no-margin ion-no-padding" *ngFor="let fechaComp of this.fechasCompetencia">
-            <ion-select-option value="{{fechaComp}}" (click)="filtrarPuntajesPorFecha(fechaComp,false)" class="text-white ion-no-margin ion-no-padding"> {{fechaComp}}</ion-select-option>
+          <div class="ion-no-margin ion-no-padding" *ngFor="let fechaComp of fechasCompetencia">
+            <ion-select-option value="{{ fechaComp }}" class="text-white ion-no-margin ion-no-padding" (click)="filtrarPorFecha(fechaComp)"> {{ fechaComp }} </ion-select-option>
           </div>
         </ion-select>
       </ion-row>
     </ion-col>
   </ion-row>
- 
+  <div *ngIf="!isCargando && clickEventCargaJornada">
+    <ion-row *ngFor="let itemPuntaje of listPuntajesFiltrados; let i = index">
+      <ion-col [size]="12">
+        <ion-item class="ion-no-padding ion-no-margin"
+                  [ngClass]="itemPuntaje.name.includes(nameUserLogueado)?'desenfoque-user':''">
+          <ion-col class="ion-no-padding display-flex" [size]="2">
+            <p class=" ion-no-padding margin-auto text-white"> {{ i + 1 }} </p>
+          </ion-col>
+          <ion-col class="ion-no-padding ion-no-margin" [size]="8">
+            <p class=" ion-no-padding ion-no-margin text-white"> {{itemPuntaje.name}} </p>
+          </ion-col>
+          <ion-col class="ion-no-padding ion-no-margin" [size]="2">
+            <p class="ion-no-padding ion-no-margin text-white"> {{itemPuntaje.puntos_acumulados}} </p>
+          </ion-col>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </div>
   
-  <div *ngIf="!isCargando && clickEventCargaGeneral">
+  <div *ngIf="!isCargando && clickEventCargaGeneral && !clickEventCargaJornada">
     <ion-row  *ngFor="let itemPuntaje of listPuntajesTablaGeneral; let i = index">
       <ion-col [size]="12">
           <ion-item class="ion-no-padding ion-no-margin" [ngClass]="itemPuntaje.name.includes(nameUserLogueado)?'desenfoque-user':''">
@@ -60,24 +91,6 @@
                 <p class="ion-no-padding ion-no-margin text-white" > {{itemPuntaje.puntos_acumulados}} </p>
               </ion-col>
           </ion-item>
-      </ion-col>
-    </ion-row>
-  </div>
-
-  <div *ngIf="!isCargando && clickEventCargaJornada">
-    <ion-row  *ngFor="let itemPuntaje of listPuntajesTablaPorFecha; let i = index">
-      <ion-col [size]="12">
-        <ion-item class="ion-no-padding ion-no-margin" [ngClass]="itemPuntaje.name.includes(nameUserLogueado)?'desenfoque-user':''">
-          <ion-col class="ion-no-padding display-flex" [size]="2">
-            <p class=" ion-no-padding margin-auto text-white" > {{ i + 1 }} </p>
-          </ion-col>
-          <ion-col class="ion-no-padding ion-no-margin" [size]="8">
-            <p class=" ion-no-padding ion-no-margin text-white" > {{itemPuntaje.name}} </p>
-          </ion-col>
-          <ion-col class="ion-no-padding ion-no-margin" [size]="2">
-            <p class="ion-no-padding ion-no-margin text-white" > {{itemPuntaje.puntos_acumulados}} </p>
-          </ion-col>
-        </ion-item>
       </ion-col>
     </ion-row>
   </div>
