--- a/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.html
+++ b/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.html
@@ -46,7 +46,7 @@
     <ion-row>
         <ion-col [size]="12" *ngIf="isCargando">
             <ion-progress-bar color="primary" type="indeterminate"></ion-progress-bar>
-            <p class="text-white">Aguarde, cargando enfrentamientos de <b>{{competenciaSeleccionada}}</b></p>
+            <p class="text-white">Aguarde, cargando enfrentamientos.</p>
         </ion-col>
     </ion-row>
 
@@ -57,7 +57,7 @@
                         <ion-row >
                             <ion-col [size]="12">
                                 <ion-row>
-                                    <ion-col [size]="4">
+                                    <ion-col [size]="4" >
                                         <ion-row>
                                           <img class="centrar" src="{{enfrent.logoLocal}}" style="height: 50%; width: 50%" >
                                         </ion-row>
@@ -66,27 +66,30 @@
                                         </ion-row>
                                     </ion-col>
                                     <ion-col [size]="4" *ngIf="enfrent.golLocal!=null || enfrent.golVisit!=null;else other_content">
+                                        <ion-row style="margin-top:1.5rem">
+                                            <ion-col class="ion-no-margin ion-no-padding display-flex" [size]="12">
+                                                <p class="text-resultado margin-auto"> Resultado final</p>
+                                            </ion-col>
+                                        </ion-row>
                                         <ion-row class="display-flex">
-                                            <p class="text-resultado"> Resultado</p>
+                                         
                                             <ion-col class="ion-no-margin ion-no-padding display-flex" [size]="5">
-                                                <ion-input (click)="isModifico(enfrent)"  class="ion-no-margin ion-no-padding text-goles" name="golLocal" [(ngModel)]="enfrent.golLocal"  type="number" ngModel required></ion-input>
+                                                <ion-input [disabled]="enfrent.isComparado==1" (click)="isModifico(enfrent, $event)"  class="ion-no-margin ion-no-padding text-goles" name="golLocal" [(ngModel)]="enfrent.golLocal"  type="number" ngModel required></ion-input>
                                             </ion-col>
                                             <ion-col class="ion-no-margin ion-no-padding display-flex" [size]="2">
                                                 
                                             </ion-col>
                                             <ion-col [size]="5" class="ion-no-margin ion-no-padding display-flex">
-                                                <ion-input (click)="isModifico(enfrent)"  class="ion-no-margin ion-no-padding text-goles" name="golLocal" [(ngModel)]="enfrent.golVisit"  type="number" ngModel required></ion-input>
+                                                <ion-input [disabled]="enfrent.isComparado==1" (click)="isModifico(enfrent, $event)"  class="ion-no-margin ion-no-padding text-goles" name="golLocal" [(ngModel)]="enfrent.golVisit"  type="number" ngModel required></ion-input>
                                             </ion-col>
                                         </ion-row>
                                     </ion-col>
                                     <ng-template #other_content>
-                                            <ion-col [size]="4">
-                                                <ion-row>
-                                                    <ion-col class="display-flex">
-                                                        <p class="ion-no-margin ion-no-padding text-resultado-no-disponible">Resultado no disponible</p>
-                                                    </ion-col>
-                                                </ion-row>
-                                            </ion-col>
+                                        <ion-col [size]="4" class="ion-no-padding display-flex">
+                                                <ion-badge fill="outline" color="warning" class="margin-auto">
+                                                    <p class="text-resultado margin-auto"> Falta jugar</p>
+                                                </ion-badge>
+                                        </ion-col>
                                     </ng-template>
                                     <ion-col [size]="4">
                                         <ion-row>
