--- a/src/app/reporte-grupos/reporte-grupos.component.html
+++ b/src/app/reporte-grupos/reporte-grupos.component.html
@@ -16,10 +16,10 @@
                 <ion-row>
                     
                     <ion-item class="ion-no-margin ion-no-padding">
-                        <ion-col [size]="3" class="display-flex">
+                        <ion-col [size]="2" class="display-flex">
                             <p class="text-white margin-auto">Grupo</p>
                         </ion-col>
-                        <ion-col [size]="6">
+                        <ion-col [size]="4">
                             <ion-row>
                                 <ion-col class="display-flex">
                                     <p class="text-white margin-auto" >Aciertos</p>
@@ -34,28 +34,34 @@
                                 </ion-col>
                             </ion-row>
                         </ion-col>
-                        <ion-col [size]="3" class="display-flex">
+                        <ion-col [size]="2" class="display-flex">
                             <p class="text-white margin-auto">No aciertos</p>
+                        </ion-col>
+                        <ion-col [size]="4" class="display-flex">
+                            <p class="text-white margin-auto">Total pronosticados</p>
                         </ion-col>
                     </ion-item>
                 </ion-row>
                 
                 <ion-row *ngFor="let grupo of gruposReport; let i = index">
                     <ion-item class="ion-no-margin ion-no-padding">
-                        <ion-col [size]="1" class="display-flex">
+                        <ion-col [size]="0.5" class="display-flex">
                             <p class="text-white margin-auto">{{i+1}}</p>
                         </ion-col>
-                        <ion-col [size]="2" class="display-flex">
+                        <ion-col [size]="1.5" class="display-flex">
                             <p class="text-white margin-auto">{{grupo.nameGrupo}}</p>
                         </ion-col>
-                        <ion-col [size]="3" class="display-flex">
+                        <ion-col [size]="2" class="display-flex">
                             <p class="text-white margin-auto">{{grupo.aciertos_exactos}}</p>
                         </ion-col>
-                        <ion-col [size]="3" class="display-flex">
-                            <p class="text-white margin-auto">{{grupo.aciertos_no_exactos}}</p>
+                        <ion-col [size]="2" class="display-flex">
+                            <p class="text-white margin-auto">{{grupo.aciertos_parciales}}</p>
                         </ion-col>
-                        <ion-col [size]="3" class="display-flex">
+                        <ion-col [size]="2" class="display-flex">
                             <p class="text-white margin-auto">{{grupo.no_aciertos}}</p>
+                        </ion-col>
+                        <ion-col [size]="4" class="display-flex">
+                            <p class="text-white margin-auto">{{grupo.totalPartidosPronosticadosYCalculados}}</p>
                         </ion-col>
                     </ion-item>
                 </ion-row>
@@ -68,9 +74,10 @@
     
     <ion-row class="ion-no-padding ion-no-margin desenfoque" *ngIf="!sinReportes" >
         <ion-col class="ion-no-padding ion-no-margin">
-            <h5 class="text-white " style="padding-left: 1rem"> Porcentaje de desempeño de aciertos de grupos</h5>
-            <div class="display-flex">
-                <canvas id="myChart"></canvas>
+            <h5 class="ion-no-margin text-grafico text-white " > Porcentaje de desempeño de aciertos de grupos</h5>
+            <p class="ion-no-margin ion-no-padding text-white " style="padding-left: 1rem">(Sobre el total de partidos que fueron pronosticados y calculados)</p>
+            <div class="display-flex" style="height: 300px;">
+                <canvas id="myChart" ></canvas>
             </div>
         </ion-col>
     </ion-row>
